--- a/one/templates/includes/footer.ejs
+++ b/one/templates/includes/footer.ejs
@@ -20,5 +20,11 @@
 <div id="back_to_top" class="back_to_top">
   <span>△</span>
 </div>
-</div>
+<%if(site.customConfig.busuanzi){%>
+<p class="statistic" id="busuanzi_container_site_pv">
+  Traffic statistics: site <span id="busuanzi_value_site_pv"></span> times, page <span id="busuanzi_value_page_pv"></span> times.
+</p>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<%}%>
 <script src="<%= themeConfig.domain %>/media/scripts/util.js"></script>
+</div>
