--- a/one/templates/includes/head.ejs
+++ b/one/templates/includes/head.ejs
@@ -4,5 +4,6 @@
 <title><%=siteTitle%></title>
 <link rel="shortcut icon" href="<%= themeConfig.domain %>/favicon.ico">
 <link href="<%= themeConfig.domain %>/styles/main.css" rel="stylesheet">
-<link href="//at.alicdn.com/t/font_1678829_ntebi130zaa.css" rel="stylesheet">
-<link rel="alternate" type="application/rss+xml" title="<%= themeConfig.siteName%> » Feed" href="<%= themeConfig.domain %>/atom.xml">
+<link href="//at.alicdn.com/t/font_1678829_xy40eqbcmaa.css" rel="stylesheet">
+<link rel="alternate" type="application/rss+xml" title="<%= themeConfig.siteName%> » Feed"
+    href="<%= themeConfig.domain %>/atom.xml">
