--- a/one/templates/tag.ejs
+++ b/one/templates/tag.ejs
@@ -30,7 +30,7 @@
                 <div class="article-infos">
                   <i class="iconfont icon-words-sm"></i>
                   <span class="article-info"><%=post.stats.words%></span>
-                  <i class="iconfont icon-time-sm"></i>
+                  <i class="iconfont icon-calendar"></i>
                   <span class="article-info"><%=post.dateFormat%></span>
                 </div>
                 <%if(post.tags.length > 0) { %>
