--- a/one/templates/api.ejs
+++ b/one/templates/api.ejs
@@ -6,13 +6,12 @@ function refine(str){
 }
 
 function output(){
-   // 全站 API
+   // 全站 API，根据主题需要取消注释使用相应接口
    let api = {
+      // customConfig: site.customConfig,
       // tags: site.tags,
       // menus: site.menus,
       // themeConfig: site.themeConfig,
-      // customConfig: site.customConfig,
-      // utils: site.utils,
       posts: [] // 必选，不可更改
    }
 site.posts.forEach(post => {
