--- a/one/templates/includes/head.ejs
+++ b/one/templates/includes/head.ejs
@@ -1,9 +1,8 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<meta name="apple-mobile-web-app-capable" content="yes" />
-<title><%=siteTitle%></title>
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+<title><%= siteTitle %></title>
 <link rel="shortcut icon" href="<%= themeConfig.domain %>/favicon.ico">
 <link href="<%= themeConfig.domain %>/styles/main.css" rel="stylesheet">
 <link href="//at.alicdn.com/t/font_1678829_7cn41ho9lyt.css" rel="stylesheet">
-<link rel="alternate" type="application/rss+xml" title="<%= themeConfig.siteName%> » Feed"
-    href="<%= themeConfig.domain %>/atom.xml">
+<link rel="alternate" type="application/rss+xml" title="<%= themeConfig.siteName %> » Feed" href="<%= themeConfig.domain %>/atom.xml">
