--- a/one/templates/includes/header.ejs
+++ b/one/templates/includes/header.ejs
@@ -1,36 +1,31 @@
 <div class="header animated fadeInDown">
-  <div class="site_title_container">
-    <div class="site_title">
-      <a href="<%= themeConfig.domain %>">
-        <%= themeConfig.siteName %>
-      </a>
+    <div class="site_title_container">
+        <div class="site_title">
+            <a href="<%= themeConfig.domain %>"><%= themeConfig.siteName %></a>
+        </div>
     </div>
-  </div>
-  <div class="my_socials">
-    <%[ 'github', 'twitter', 'weibo', 'instagram', 'telegram'].forEach((item)=>{%>
-    <%if(site.customConfig[item]){%>
-    <a href="<%= site.customConfig[item] %>" target="_blank">
-      <i class="iconfont icon-<%= item %>"></i></a>
-    <%}%>
-          <%})%>
-    <a href="<%= themeConfig.domain %>/atom.xml" target="_blank">
-      <i class="iconfont icon-rss"></i></a>
-  </div>
+    <div class="my_socials">
+        <% ['github', 'twitter', 'weibo', 'instagram', 'telegram'].forEach((item)=>{ %>
+            <% if(site.customConfig[item]){ %>
+                <a href="<%= site.customConfig[item] %>" target="_blank"><i class="iconfont icon-<%= item %>"></i></a>
+            <% } %>
+        <% }) %>
+        <a href="<%= themeConfig.domain %>/atom.xml" target="_blank"><i class="iconfont icon-rss"></i></a>
+    </div>
 </div>
-<%if(!site.customConfig.footerMenu){%>
-<div class="header_menu">
-  <%menus.forEach(function(menu){%>
-  <%if(menu.openType==='External' ){%>
-  <a href="<%= menu.link %>" class="menu" target="_blank">
-    <%=menu.name%></a>
-  <%}else{%>
-  <a href="<%= menu.link %>" class="menu"><%=menu.name%></a>
-  <%}%>
-<%});%>
-  <div class="gridea-search-div">
-    <form id="gridea-search-form" action="<%= themeConfig.domain %>/search/">
-      <input class="gridea-search-input" autocomplete="off" spellcheck="false" name="q" />
-    </form>
-  </div>
-</div>
-<%}%>
+<% if(!site.customConfig.footerMenu){ %>
+    <div class="header_menu">
+        <% menus.forEach(function(menu){ %>
+            <% if(menu.openType === 'External' ){ %>
+                <a href="<%= menu.link %>" class="menu" target="_blank"><%= menu.name %></a>
+            <% }else{ %>
+                <a href="<%= menu.link %>" class="menu"><%= menu.name %></a>
+            <% } %>
+        <% }); %>
+        <div class="gridea-search-div">
+            <form id="gridea-search-form" action="<%= themeConfig.domain %>/search/">
+                <input class="gridea-search-input" autocomplete="off" spellcheck="false" name="q"/>
+            </form>
+        </div>
+    </div>
+<% } %>
