--- a/one/templates/includes/footer.ejs
+++ b/one/templates/includes/footer.ejs
@@ -25,7 +25,9 @@
             Traffic statistics: site <span id="busuanzi_value_site_pv"></span> times, page
             <span id="busuanzi_value_page_pv"></span> times.
         </p>
-        <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
     <% } %>
-    <script src="<%= themeConfig.domain %>/media/scripts/util.js"></script>
 </div>
+<% if(site.customConfig.busuanzi){ %>
+    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<% } %>
+<script src="<%= themeConfig.domain %>/media/scripts/util.js"></script>
